examples/eks-cluster-with-new-vpc-stc-eks-atlas-test-1/traefik/https-redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
