examples/eks-cluster-with-new-vpc-stc-eks-atlas-test-1/traefik/mw.yaml
# middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: traefik
spec:
  basicAuth:
    secret: basic-auth-creds
