examples/eks-cluster-with-new-vpc-stc-eks-atlas-test-1/traefik/traefik-dashboard-redirecthttps-ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefik-dashboard-redirect
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik-dashboard-atlas-test-1.hostk8s4.com`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
     middlewares:
     - name: https-redirect
       namespace: traefik
     - name: traefik-dashboard-redirect
       namespace: traefik
